[tool.poetry]
name = "flask-aserto"
version = "0.31.2"
description = "Aserto integration for Flask"
readme = "README.md"
authors = ["Aserto, Inc. <pypi@aserto.com>"]
maintainers = ["authereal <authereal@aserto.com>"]
homepage = "https://github.com/aserto-dev/flask-aserto/tree/HEAD"
repository = "https://github.com/aserto-dev/flask-aserto/tree/HEAD"
documentation = "https://github.com/aserto-dev/flask-aserto/tree/HEAD"
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
packages = [
    {include = "flask_aserto", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9"
Flask-Cors = ">=4.0.2,<5.0.0"
grpcio = "^1.64.0"
protobuf = "^5.27.2"
aserto = "^0.32.0"

[tool.poetry.dev-dependencies]
black = "^24.3"
isort= "^5.9.0"
pyright = "^1.1.0"
pytest = "^8.2.2"
bump-my-version = "^0.28.1"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.bumpversion]
current_version = "0.31.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = "no"
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

